# printops

./: .gitignore  .gitleaksignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_create_printers_table.py  0002_add_port_and_use_tls_columns.py  0003_create_jobs_table.py  0004_add_airprint_enabled_to_printers.py  0005_add_queue_sync_error_to_printers.py  0006_create_mosyle_settings_and_devices_tables.py  0007_add_attribution_method_to_jobs.py  0008_create_classguard_settings_table.py  0009_create_google_workspace_settings_and_devices.py  0010_create_users.py  0011_create_google_sso_settings.py  0012_add_job_page_count.py  0013_add_google_workspace_users_device_overrides.py  0014_add_update_schedule.py  0015_add_printer_status.py  0016_add_job_report_fields.py  (+35 more)
apps/api/app/: db.py  deps.py  main.py
apps/api/tests/: conftest.py  test_attribution.py  test_attribution_aliases_api.py  test_auth.py  test_canon_department_id_connector.py  test_capabilities.py  test_copier_imports_api.py  test_copier_unmapped_api.py  test_counter_history.py  test_cups_backend_hold_decision.py  test_cups_ppd_info.py  test_device_overrides_api.py  test_git_update.py  test_google_workspace_integration.py  test_health.py  test_ipp_client.py  test_jobs_api.py  test_konica_bizhub_connector.py  test_kyocera_department_management_connector.py  test_ldap_internal_api.py  test_mfp_devices_api.py  test_mosyle_integration.py  test_printer_ou_access_api.py  test_printer_quotas_api.py  test_printer_release_bypasses_api.py  test_printers_api.py  test_quota_holds_api.py  test_quota_service.py  test_release.py  test_release_api.py  test_reports_aggregation.py  test_reports_api.py  test_reports_formulas.py  test_reports_fun_facts.py  test_ricoh_user_code_auth_connector.py  test_self_service_print.py  test_server_settings_api.py  test_settings_api.py  test_snmp_counters.py  test_staff_copier_identities_api.py  (+9 more)
infra/ldap-relay/: README.md  printops-ldap-relay.service  pyproject.toml  server.py
(+264 files in other folders)
