[project]
name = "printops-ldap-relay"
version = "0.1.0"
description = "LDAP address-book relay for copiers — thin protocol wrapper around printops-api's internal /ldap/bind and /ldap/search endpoints"
requires-python = ">=3.12"
dependencies = [
  "ldaptor>=21.2",
  "twisted>=24.7",
  "httpx>=0.27",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ldap3>=2.9.1",
]
